[gd_scene load_steps=2 format=3 uid="uid://dictionaryui001"]

[ext_resource type="Script" path="res://scripts/dictionary_ui.gd" id="1"]

[node name="DictionaryUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.7)

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -600.0
offset_top = -400.0
offset_right = 600.0
offset_bottom = 400.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="CategoryList" type="ItemList" parent="Panel/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 10

[node name="Title" type="Label" parent="Panel/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "ðŸ“š DICCIONARIO"
horizontal_alignment = 1
vertical_alignment = 1

[node name="WordList" type="ItemList" parent="Panel/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="WordDetail" type="RichTextLabel" parent="Panel/MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
bbcode_enabled = true
fit_content = true

[node name="CloseButton" type="Button" parent="Panel/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Cerrar (ESC)"

[connection signal="pressed" from="Panel/MarginContainer/HBoxContainer/VBoxContainer/CloseButton" to="." method="_on_close_pressed"]
